Fix `ICSCalendarLink` button overflow (#4945)
* Show rounded corners for the last button only

* Make `ICSCalendarLink` scale with its buttons

Thanks to @javfg. Changes are based on this SO thread:
https://stackoverflow.com/q/55040250

In summary, the width of the popup is determined by the
width of the buttons. This is needed because the button
widths depend on the specific language.

The scaling behavior is achieved by setting `width: 0` and
`min-width: 100%` on the popup content, which lets the
buttons determine the width.

--- a/indico/web/client/js/react/components/ICSCalendarLink.module.scss
+++ b/indico/web/client/js/react/components/ICSCalendarLink.module.scss
@@ -48,11 +48,27 @@
 .download-button:global(.ui.icon.button) {
   display: flex;
   align-items: center;
-  margin: 0;
+  margin: 0 0 0 0.5rem;
   height: 2.125rem;
 }
 
 .download-option {
   display: flex;
   align-items: center;
+}
+
+.popup:global(.ui.wide.popup) {
+  display: inline-flex;
+  min-width: 350px;
+  max-width: 450px;
+}
+
+.popup .content {
+  width: 0;
+  min-width: 100%;
+}
+
+.button-group :global(.ui.labeled.button) button:global(.ui.button):last-child {
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
 }
